<resources >
    <string name="app_name">白癜风智能诊断</string>
    <string name="account">账号</string>
    <string name="plesase_input_account">请输入账号</string>
    <string name="login">登录</string>
    <string name="submit" >提交</string>
    <string name="forget_password">忘记密码</string>
    <string name="password">密码</string>
    <string name="plesase_input_password">请输入密码</string>
    <string name="go_to_registe">注册</string>
    <string name="third_method_login">第三方登录</string>
    <string name="if_login_is_meaning_to_geree">if login is meaning to geree </string>
    <string name="the_service">the service</string>
    <string name="iv_third_method1">iv_third_method1</string>
    <string name="iv_third_method2">iv_third_method2</string>
    <string name="iv_third_method3">iv_third_method3</string>
    <string name="iv_project_icon">iv_project_icon</string>
    <string name="tv_register">用户注册</string>
    <string name="tv_phone">手机号码</string>
    <string name="tv_birthday">出生年月</string>
    <string name="et_phone">请输入手机号码</string>
    <string name="bt_get_code">获取验证码</string>
    <string name="tv_code">验证码</string>
    <string name="et_code">请输入验证码</string>
    <string name="tv_name">姓名</string>
    <string name="et_name">请输入姓名</string>
    <string name="tv_gender">性别</string>
    <string name="et_gender">1 代表男性 2 代表女性</string>
    <string name="tv_age">年龄</string>
    <string name="et_age">请输入年龄</string>
    <string name="tv_password">密码</string>
    <string name="et_password">请输入密码</string>
    <string name="et_password2">请再次输入相同密码</string>
    <string name="bt_register">提交</string>
    <string name="bt_save_scale_result">保存量表结果</string>
    <string name="tv_year">年</string>
    <string name="tv_month">月</string>
    <string-array name="list_gender">
        <item>男</item>
        <item>女</item>
    </string-array>
    <string-array name="list_year">
        <item>1950</item>
        <item>1951</item>
        <item>1952</item>
        <item>1953</item>
        <item>1954</item>
        <item>1955</item>
        <item>1956</item>
        <item>1957</item>
        <item>1958</item>
        <item>1959</item>
        <item>1960</item>
        <item>1961</item>
        <item>1962</item>
        <item>1963</item>
        <item>1964</item>
        <item>1965</item>
        <item>1966</item>
        <item>1967</item>
        <item>1968</item>
        <item>1969</item>
        <item>1971</item>
        <item>1972</item>
        <item>1973</item>
        <item>1974</item>
        <item>1975</item>
        <item>1976</item>
        <item>1977</item>
        <item>1978</item>
        <item>1979</item>
        <item>1980</item>
        <item>1981</item>
        <item>1982</item>
        <item>1983</item>
        <item>1984</item>
        <item>1985</item>
        <item>1986</item>
        <item>1987</item>
        <item>1988</item>
        <item>1989</item>
        <item>1990</item>
        <item>1991</item>
        <item>1992</item>
        <item>1993</item>
        <item>1994</item>
        <item>1995</item>
        <item>1996</item>
        <item>1997</item>
        <item>1998</item>
        <item>1999</item>
        <item>2000</item>
        <item>2001</item>
        <item>2002</item>
        <item>2003</item>
        <item>2004</item>
        <item>2005</item>
        <item>2006</item>
        <item>2007</item>
        <item>2008</item>
        <item>2009</item>
        <item>2010</item>
        <item>2011</item>
        <item>2012</item>
        <item>2013</item>
        <item>2014</item>
        <item>2015</item>
        <item>2016</item>
        <item>2017</item>
        <item>2018</item>
        <item>2019</item>
        <item>2020</item>
        <item>2021</item>
        <item>2022</item>
        <item>2023</item>
    </string-array>
    <string-array name="scale_selected">
        <item>没有或很少时间</item>
        <item>小部分时间</item>
        <item>相当多时间</item>
        <item>绝大部分或全部时间</item>
    </string-array>
    <string name="SAS_1">我觉得比平时容易紧张或着急</string>
    <string name="SAS_2">我无缘无故在感到害怕</string>
    <string name="SAS_3">我容易心里烦乱或感到惊恐</string>
    <string name="SAS_4">我觉得我可能将要发疯</string>
    <string name="SAS_5">我觉得一切都很好</string>
    <string name="SAS_6">我手脚发抖打颤</string>
    <string name="SAS_7">我因为头疼、颈痛和背痛而苦恼</string>
    <string name="SAS_8">我觉得容易衰弱和疲乏</string>
    <string name="SAS_9">我觉得心平气和，并且容易安静坐着</string>
    <string name="SAS_10">我觉得心跳得很快</string>
    <string name="SAS_11">我因为一阵阵头晕而苦恼</string>
    <string name="SAS_12">我有晕倒发作，或觉得要晕倒似的</string>
    <string name="SAS_13">我吸气呼气都感到很容易</string>
    <string name="SAS_14">我的手脚麻木和刺痛</string>
    <string name="SAS_15">我因为胃痛和消化不良而苦恼</string>
    <string name="SAS_16">我常常要小便</string>
    <string name="SAS_17">我的手脚常常是干燥温暖的</string>
    <string name="SAS_18">我脸红发热</string>
    <string name="SAS_19">我容易入睡并且一夜睡得很好</string>
    <string name="SAS_20">我的手脚麻木和刺痛</string>
    <string name="SDS_1">我觉得闷闷不乐 , 情绪低沉</string>
    <string name="SDS_2">我觉得一天之中早晨最好</string>
    <string name="SDS_3">我一阵阵哭出来或想哭</string>
    <string name="SDS_4">我晚上睡眠不好</string>
    <string name="SDS_5">我吃得跟平常一样多</string>
    <string name="SDS_6">我与异性密切接触时和以往一样感到愉快</string>
    <string name="SDS_7">我发觉我的体重在下降</string>
    <string name="SDS_8">我有便秘的苦恼</string>
    <string name="SDS_9">我心跳比平时快</string>
    <string name="SDS_10">我无缘无故地感到疲乏</string>
    <string name="SDS_11">我的头脑跟平常一样清楚</string>
    <string name="SDS_12">我觉得经常做的事情并没困难</string>
    <string name="SDS_13">我觉得不安而平静不下来</string>
    <string name="SDS_14">我对将来抱有希望</string>
    <string name="SDS_15">我比平常容易生气激动</string>
    <string name="SDS_16">我觉得作出决定是容易的</string>
    <string name="SDS_17">我觉得自己是个有用的人，有人需要我</string>
    <string name="SDS_18">我的生活过得很有意思</string>
    <string name="SDS_19">我认为如果我死了别人会生活得更好些</string>
    <string name="SDS_20">平常感兴趣的事我仍然照样感兴趣</string>
    <string name="bt_submit_scale">提交量表结果</string>
    <string-array name="list_month">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>
    <string-array name="list_age">
    <item>1</item>
    <item>2</item>
    <item>3</item>
    <item>4</item>
    <item>5</item>
    <item>6</item>
    <item>7</item>
    <item>8</item>
    <item>9</item>
    <item>10</item>
    <item>11</item>
    <item>12</item>
    <item>13</item>
    <item>14</item>
    <item>15</item>
    <item>16</item>
    <item>17</item>
    <item>18</item>
    <item>19</item>
    <item>20</item>
    <item>21</item>
    <item>22</item>
    <item>23</item>
    <item>24</item>
    <item>25</item>
    <item>26</item>
    <item>27</item>
    <item>28</item>
    <item>29</item>
    <item>30</item>
    <item>31</item>
    <item>32</item>
    <item>33</item>
    <item>34</item>
    <item>35</item>
    <item>36</item>
    <item>37</item>
    <item>38</item>
    <item>39</item>
    <item>40</item>
    <item>41</item>
    <item>42</item>
    <item>43</item>
    <item>44</item>
    <item>45</item>
    <item>46</item>
    <item>47</item>
    <item>48</item>
    <item>49</item>
    <item>50</item>
    <item>50</item>
    <item>51</item>
    <item>52</item>
    <item>53</item>
    <item>54</item>
    <item>55</item>
    <item>56</item>
    <item>57</item>
    <item>58</item>
    <item>59</item>
    <item>60</item>
    <item>61</item>
    <item>62</item>
    <item>63</item>
    <item>64</item>
    <item>65</item>
    <item>66</item>
    <item>67</item>
    <item>68</item>
    <item>69</item>
    <item>71</item>
    <item>72</item>
    <item>73</item>
    <item>74</item>
    <item>75</item>
    <item>76</item>
    <item>77</item>
    <item>78</item>
    <item>79</item>
    <item>80</item>
    <item>81</item>
    <item>82</item>
    <item>83</item>
    <item>84</item>
    <item>85</item>
    <item>86</item>
    <item>87</item>
    <item>88</item>
    <item>89</item>
    <item>90</item>
    <item>91</item>
    <item>92</item>
    <item>93</item>
    <item>94</item>
    <item>95</item>
    <item>96</item>
    <item>97</item>
    <item>98</item>
    <item>99</item>
    </string-array>
    <string name="SAS_SDS_desc">本量表包含 20 个项目，分为4 级评分，请您仔细阅读以下内容， 根据最近一星期的情况如实回答。填表说明：请在每题后选项对应的 方框内划勾，每题限选一个答案。</string>
    <string name="medical_record_desc">本量表旨在收集您的基本病历信息，为您创建专属您的个人病历</string>
    <string name="tv_culture">文化程度</string>
    <string-array name="culture_selected">
        <item>初中及以下</item>
        <item>高中</item>
        <item>大专</item>
        <item>本科</item>
        <item>研究生及以上</item>
    </string-array>
    <string name="tv_profession">职业</string>
    <string-array name="profession_selected">
        <item> 机关企事业单位类</item>
        <item> 专业技术类</item>
        <item>农林牧渔劳动类</item>
        <item>商业类</item>
        <item> 服务类</item>
        <item> 海陆空军人</item>
        <item> 离退休</item>
        <item>家务劳动者</item>
        <item> 无业</item>
        <item> 其他</item>
    </string-array>
    <string name="tv_smoke">吸烟</string>
    <string-array name="smoke_selected">
        <item>不吸烟</item>
        <item>偶尔吸烟</item>
        <item>吸烟（每天至少一支，持续一年以上）</item>
        <item>已戒烟（一年以上）</item>
    </string-array>
    <string name="tv_wine">喝酒</string>
    <string-array name="wine_selected">
        <item>是</item>
        <item>否</item>
    </string-array>
    <string name="tv_height">身高(cm)</string>
    <string name="et_height">请输入身高</string>
    <string name="tv_weight">体重(kg)</string>
    <string name="et_weight">请输入体重</string>
    <string name="tv_F">皮肤分型(kg)</string>
    <string-array name="F_selected">
        <item>Ⅰ型</item>
        <item>Ⅱ型</item>
        <item>Ⅲ型</item>
        <item>Ⅳ型</item>
        <item>Ⅴ型</item>
        <item>Ⅵ型</item>
    </string-array>
    <string name="tv_date_one">首次出现白斑时间</string>
    <string name="tv_ill_time">病程</string>
    <string name="now_white_place">现白斑部位</string>
    <string-array name="now_white_place_selected">
        <item>头皮</item>
        <item>眉区</item>
        <item>面</item>
        <item>口周</item>
        <item>眶周</item>
        <item>颈</item>
        <item>胸</item>
        <item>腹</item>
        <item>背</item>
        <item>腰</item>
        <item>会阴/腹股沟</item>
        <item>腋</item>
        <item>上臂</item>
        <item>前臂</item>
        <item>手背</item>
        <item>手掌</item>
        <item>股</item>
        <item>小腿</item>
        <item>足背</item>
        <item>足底</item>
        <item>其它</item>
    </string-array>
    <string name="tv_niian_mo">粘膜受累</string>
    <string-array name="niian_mo_selected">
        <item>唇</item>
        <item>外生殖器</item>
        <item>乳头</item>
        <item>肛周</item>
        <item>无</item>
    </string-array>
    <string name="tv_hair_white">毛发变白</string>
    <string-array name="hair_white_selected">
        <item>头发</item>
        <item>胡须</item>
        <item>腋毛</item>
        <item>阴毛</item>
        <item>眉毛</item>
        <item>睫毛</item>
        <item>鼻毛</item>
        <item>汗毛</item>
        <item>无</item>
    </string-array>
    <string name="tv_distribution">分布</string>
    <string-array name="distribution_selected">
        <item>单侧</item>
        <item>双侧</item>
    </string-array>
 <string name="tv_white_ill">白斑症状</string>
    <string-array name="white_ill_selected">
        <item>无</item>
        <item>痒</item>
        <item>灼热</item>
        <item>其他不适</item>
    </string-array>
   <string name="tv_season_ill">发病季节</string>
    <string-array name="season_ill_selected">
    <item>春</item>
    <item>夏</item>
    <item>秋</item>
    <item>冬</item>
    <item>不明</item>
    </string-array>
   <string name="tv_physics">物理接触</string>
    <string-array name="physics_selected">
    <item>日晒</item>
    <item>外伤</item>
    <item>摩擦受压</item>
    <item>其他</item>
    </string-array>
    <string name="tv_chemistry">化学接触</string>
</resources>